# Localflow

./: .gitignore  HANDOFF.md  LocalFlow.command  README.md  build_app.command  pyproject.toml
localflow/: __init__.py  app.py  cli.py  config.py  hotkeys.py  output.py  recorder.py  textproc.py  transcriber.py  tray.py
packaging/: LocalFlow.spec  tray_entry.py
tests/: test_cli.py  test_config.py  test_hotkeys.py  test_textproc.py
