[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localflow"
version = "0.1.0"
description = "LocalFlow: a private, fully-local voice dictation app (Whisper Flow alternative). Hold a key, speak, and text appears in any app."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "faster-whisper>=1.0.0",
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# For the macOS menu-bar app and the LocalFlow.app bundle build.
macapp = ["rumps>=0.4.0", "pyinstaller>=6.0"]

[project.scripts]
localflow = "localflow.cli:main"
localflow-tray = "localflow.tray:main"

[tool.setuptools.packages.find]
include = ["localflow*"]
